# fin-whale-detection-das

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: dbscan.ipynb  ht.ipynb  tm.ipynb  yolo.ipynb
src/dasly/: __init__.py  cli.py
src/dasly/core/: dasarray.py
src/dasly/detection/: dbscan.py  ht_lines.py  tm.py  yolo.py
src/dasly/execution/: box_saver.py  online.py  svalbard_yolo.py  whale_detection.py
src/dasly/filters/: box_extract.py  filter.py  resizer.py
src/dasly/fitting/: hyperbola_fitter.py
src/dasly/loader/: fsearcher.py  loader.py
src/dasly/models/: __init__.py
src/dasly/plotting/: plotting.py
