[project]
name = "dasly"
version = "2.0.0"
description = "A package to load, process and analyze Distributed Acoustic Sensing data"
authors = [
    { name = "Karl (Khanh) Truong", email = "khanh.p.d.truong@ntnu.no" },
    { name = "Karl (Khanh) Truong", email = "ktruong.me@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["Distributed Acoustic Sensing", "DAS", "signal", "acoustic"]
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "matplotlib",
    "numba",
    "numpy",
    "opencv-python",
    "pandas",
    "psycopg2-binary",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sqlalchemy>=2.0",
    "torch",
    "typer>=0.15.2",
    "ultralytics",
    "watchdog"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
dasly = "dasly.cli:app"
